# photo_slideshow

./: README.md  pyproject.toml
src/photo_slideshow/: to_slide_show.py
